# phantom-zone

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml
benches/: modulus.rs  ntt.rs
crypto/: Cargo.toml
crypto/benches/: rlwe.rs
crypto/src/: blind_rotation.rs  core.rs  distribution.rs  lib.rs  lwe.rs  misc.rs  mpc.rs  rgsw.rs  rlwe.rs  scheme.rs  util.rs
crypto/src/blind_rotation/: lmkcdey.rs
crypto/src/core/: lwe.rs  rgsw.rs  rlwe.rs
crypto/src/core/lwe/: method.rs  structure.rs  test.rs
crypto/src/core/rgsw/: method.rs  structure.rs  test.rs
crypto/src/core/rlwe/: method.rs  structure.rs  test.rs
crypto/src/lwe/: method.rs  structure.rs  test.rs
crypto/src/mpc/: interactive.rs
crypto/src/mpc/interactive/: structure.rs
crypto/src/rgsw/: method.rs  structure.rs  test.rs
crypto/src/rlwe/: method.rs  structure.rs  test.rs
crypto/src/scheme/: packing.rs  ring_packing.rs
crypto/src/scheme/blind_rotation/: lmkcdey.rs
crypto/src/scheme/blind_rotation/lmkcdey/: interactive.rs  method.rs  multi_party.rs  structure.rs  test.rs
crypto/src/scheme/blind_rotation/lmkcdey/interactive/: method.rs  structure.rs  test.rs
crypto/src/scheme/blind_rotation/lmkcdey/multi_party/: interactive.rs
crypto/src/scheme/blind_rotation/lmkcdey/multi_party/interactive/: method.rs  structure.rs  test.rs
crypto/src/scheme/ring_packing/: cdks.rs
crypto/src/scheme/ring_packing/cdks/: method.rs  structure.rs  test.rs
crypto/src/util/: distribution.rs  rng.rs
derive/: Cargo.toml
derive/src/: as_slice_wrapper.rs  lib.rs
evaluator/: Cargo.toml
evaluator/benches/: boolean.rs
evaluator/examples/: multi_party.rs  single_party.rs
evaluator/src/: boolean.rs  lib.rs
evaluator/src/boolean/: evaluator.rs  integer.rs
evaluator/src/boolean/evaluator/: fhew.rs
evaluator/src/boolean/evaluator/fhew/: param.rs  prelude.rs
examples/: benchmarks.md  bomberman.rs  div_by_zero.rs  fheuint8.rs  if_and_else.rs  interactive_fheuint8.rs  interactive_hiring.rs  meeting_friends.rs  non_interactive_fhebool.rs  non_interactive_fheuint8.rs  non_interactive_hiring.rs  non_interactive_hiring_new.rs
math/: Cargo.toml
math/benches/: poly_mul.rs  ring.rs  ring_mul.rs
math/src/: decomposer.rs  distribution.rs  fft.rs  lib.rs  misc.rs  modulus.rs  poly.rs  prime.rs  ring.rs  util.rs
math/src/misc/: as_slice.rs  automorphism.rs  poly_mul.rs  scratch.rs
math/src/modulus/: power_of_two.rs  prime.rs
math/src/poly/: automorphism.rs  ffnt.rs  karatsuba.rs  ntt.rs
math/src/ring/: ffnt.rs  po2.rs  power_of_two.rs  prime.rs  word.rs
math/src/ring/power_of_two/: noisy.rs  precise.rs
math/src/ring/prime/: noisy.rs  precise.rs
math/src/util/: compact.rs  scratch.rs  serde.rs
src/: backend.rs  bool.rs  decomposer.rs  lib.rs  lwe.rs  main.rs  multi_party.rs  noise.rs  ntt.rs  num.rs  pbs.rs  random.rs  rgsw.rs  shortint.rs  utils.rs
src/backend/: mod.rs  modulus_u64.rs  power_of_2.rs  word_size.rs
src/bool/: evaluator.rs  keys.rs  mod.rs  mp_api.rs  ni_mp_api.rs  noise.rs  parameters.rs  print_noise.rs  sp_api.rs
src/rgsw/: keygen.rs  mod.rs  runtime.rs
src/shortint/: enc_dec.rs  mod.rs  ops.rs  types.rs
