[workspace]
members = ["crypto", "derive", "evaluator", "math"]
resolver = "2"

[workspace.dependencies]
criterion = "0.5.1"
itertools = "0.13.0"
num-bigint-dig = { version = "0.8.4", default-features = false, features = ["prime"] }
num-complex = "0.4.6"
num-traits = "0.2.19"
paste = "1.0.15"
rand = { version = "0.8.5", default-features = false }
rand_distr = { version = "0.4.3", default-features = false }
rustfft = "6.2.0"

[profile.ci]
inherits = "release"
debug-assertions = true
