[workspace]
members = ["crypto", "derive", "evaluator", "math"]
resolver = "2"

[workspace.dependencies]
itertools = "0.13.0"
num-complex = "0.4.6"
num-traits = "0.2.19"
paste = "1.0.15"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
rand_distr = { version = "0.4.3", default-features = false }
rustfft = "6.2.0"
serde = "1.0"
serde_bytes = "0.11"
unroll = "0.1.5"

# dev-dependencies
bincode = "1.3.3"
criterion = "0.5.1"
num-bigint-dig = { version = "0.8.4", default-features = false }

[profile.ci]
inherits = "release"
debug-assertions = true
