[package]
name = "phantom-zone-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
phantom-zone-derive = { path = "../derive" }
phantom-zone-math = { path = "../math" }

# serde
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }
phantom-zone-math = { path = "../math", features = ["dev"] }

[features]
default = []
serde = ["dep:serde", "phantom-zone-math/serde"]
dev = ["phantom-zone-math/dev"]

[[bench]]
name = "rlwe"
harness = false
required-features = ["dev"]
