[package]
name = "phantom-zone-crypto"
version = "0.1.0"
edition = "2021"

[lints.rust]
missing_debug_implementations = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "forbid"

[dependencies]
itertools = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
phantom-zone-derive = { path = "../derive" }
phantom-zone-math = { path = "../math" }

# serde
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
phantom-zone-math = { path = "../math", features = ["dev"] }

# bench
criterion = { workspace = true }

[features]
default = []
serde = ["dep:serde", "phantom-zone-math/serde"]
dev = ["phantom-zone-math/dev"]

[[bench]]
name = "rlwe"
harness = false
required-features = ["dev"]
