[package]
name = "phantom-zone-evaluator"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
phantom-zone-crypto = { path = "../crypto" }
phantom-zone-derive = { path = "../derive" }
phantom-zone-math = { path = "../math" }

# serde
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
criterion = { workspace = true }
num-traits = { workspace = true }
phantom-zone-crypto = { path = "../crypto", features = ["dev"] }

[features]
default = []
serde = ["dep:serde", "phantom-zone-crypto/serde"]
dev = ["phantom-zone-crypto/dev"]

[[bench]]
name = "boolean"
harness = false
required-features = ["dev"]

[[example]]
name = "single_party"
required-features = ["dev"]
