[package]
name = "phantom-zone-evaluator"
version = "0.1.0"
edition = "2021"

[lints.rust]
missing_debug_implementations = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "forbid"

[dependencies]
itertools = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
phantom-zone-crypto = { path = "../crypto" }
phantom-zone-derive = { path = "../derive" }
phantom-zone-math = { path = "../math" }

# serde
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
phantom-zone-crypto = { path = "../crypto", features = ["dev"] }

# bench
criterion = { workspace = true }

# example
bincode = { workspace = true }
num-traits = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde", "phantom-zone-crypto/serde"]
dev = ["phantom-zone-crypto/dev"]

[[bench]]
name = "boolean"
harness = false
required-features = ["dev"]

[[example]]
name = "single_party"
required-features = ["dev"]

[[example]]
name = "multi_party"
required-features = ["serde", "dev"]
