[package]
name = "phantom-zone-math"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = { workspace = true }
num-bigint-dig = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rustfft = { workspace = true }
phantom-zone-derive = { path = "../derive" }

# serde
serde = { workspace = true, optional = true, features = ["derive"] }

# dev
bincode = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
num-bigint-dig = { workspace = true, features = ["prime"] }
rand = { workspace = true, features = ["std"] }

[features]
default = []
serde = ["dep:serde", "num-complex/serde"]
dev = ["dep:bincode", "num-bigint-dig/prime", "rand/std"]

[[bench]]
name = "ring"
harness = false
required-features = ["dev"]
