[package]
name = "phantom-zone-math"
version = "0.1.0"
edition = "2021"

[lints.rust]
missing_debug_implementations = "forbid"

[lints.rustdoc]
broken_intra_doc_links = "forbid"

[dependencies]
itertools = { workspace = true }
num-bigint-dig = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
rustfft = { workspace = true }
unroll = { workspace = true }
phantom-zone-derive = { path = "../derive" }

# serde
serde = { workspace = true, optional = true, features = ["derive"] }
serde_bytes = { workspace = true, optional = true }

# dev
bincode = { workspace = true, optional = true }

[dev-dependencies]
num-bigint-dig = { workspace = true, features = ["prime"] }
rand = { workspace = true, features = ["std"] }

# bench
criterion = { workspace = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_bytes", "num-complex/serde"]
dev = ["dep:bincode", "num-bigint-dig/prime", "rand/std"]

[[bench]]
name = "ring"
harness = false
required-features = ["dev"]
